--- a/alembic.ini
+++ b/alembic.ini
@@ -3,7 +3,7 @@
 [alembic]
 # path to migration scripts.
 # Use forward slashes (/) also on windows to provide an os agnostic path
-script_location = app/database/migrations
+script_location = app/database/alembic
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
 # Uncomment the line below if you want the files to be prepended with date and time
@@ -61,7 +61,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = driver://user:pass@localhost/dbname
+sqlalchemy.url = postgresql://postgres:12345678@localhost:5432/telegram_bot
 
 
 [post_write_hooks]
@@ -113,5 +113,6 @@ level = NOTSET
 formatter = generic
 
 [formatter_generic]
-format = %(levelname)-5.5s [%(name)s] %(message)s
+format = '[%(asctime)s] #%(levelname)-8s %(filename)s:'
+       '%(lineno)d - %(name)s - %(message)s'
 datefmt = %H:%M:%S
